# CrossShader

./: .gitignore  .gitmodules  .npmignore  .travis.yml  CMakeLists.txt  cross-shader.d.ts  cross-shader.js  package-lock.json  package.json  readme.md  webpack.common.js
docs/: logo.hxl
examples/webpack/: package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.ts
examples/webpack/src/: main.ts
src/CrossShader/: CrossShader.cpp  CrossShader.h
tests/: matrix.glsl  matrix.vert  snippetFunction.glsl  snippetLine.glsl  test.js  test.ts
